handwritten_digits using CNN

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -306,7 +306,11 @@
    "id": "fb5686cf-bb6e-4489-8683-8edc15fc3342",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = keras.Sequential([\n",
+    "    keras.layer.Dense\n",
+    "])"
+   ]
   }
  ],
  "metadata": {
